# C-Project

./: Administrator.cpp  Administrator.h  Analityk.cpp  Analityk.h  CMakeLists.txt  Firma.cpp  Firma.h  Firma_obsluga.cpp  Firma_obsluga.h  Ksiegowy.cpp  Ksiegowy.h  Praca_obsluga.cpp  Praca_obsluga.h  Pracownicy.cpp  Pracownicy.h  Programista.cpp  Programista.h  Stazysta.cpp  Stazysta.h  Wyjatki.cpp  Wyjatki.h  main.cpp  stdin.txt
